@@ -214,6 +214,9 @@ abstract class FormField extends HTMLTag {
 		if (!$this->attributes->get('class') || !strpos($this->attributes->get('class'), $this->attributes->name)) {
 			$this->attributes->appendTo('class', ' '.$this->attributes->name);
 		}
+		if ($this->mandatory && (!$this->attributes->get('class') || !strpos($this->attributes->get('class'), 'mandatory'))) {
+			$this->attributes->appendTo('class', ' mandatory');
+		}
 		if (!$this->validate() && $this->form->submitted() && (!$this->attributes->get('class') || !strpos($this->attributes->get('class'), 'error'))) {
 			$this->attributes->appendTo('class', ' error');
 		}
